updated index file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en-ca">
+<head>
+  <meta charset="utf-8">
+  <title>This is my first gibhub page for chuck</title>
+<!--   <script src="script.js"></script>
+<script src="function.js"></script>
+<script src="todolist.js"></script> -->
+<!--   <script src="exercise.js"></script> -->
 
+</head>
+<body>
+<h1>Oh Yeah I am learning Java script!!!!!</h1>
+<script src=".js"></script>
+</body>
+</html>
