--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<ul>
 							<li><a href="#intro">Home</a></li>
 							<li><a href="#one">Chuck Pawlus</a></li>
-							<li><a href="#two">Expertise</a></li>
+							<li><a href="#two">Services</a></li>
 							<li><a href="#three">Contact</a></li>
 						</ul>
 					</nav>
@@ -108,10 +108,10 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>Please enter your contact information and a brief meesage. we will reach out to your as soon as possible</p>
 							<div class="split style1">
 								<section>
-									<form method="post" action="#">
+									<<form action="https://formspree.io/eeti3084@email.com"method="post">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
@@ -121,6 +121,11 @@
 												<label for="email">Email</label>
 												<input type="text" name="email" id="email" />
 											</div>
+											<div class="cont">
+											<label for="subject-id">Phone:</label>
+											<input name="subject-id" type="text" id="subject-id" maxlength="60">
+											</div>
+
 											<div class="field">
 												<label for="message">Message</label>
 												<textarea name="message" id="message" rows="5"></textarea>
@@ -135,17 +140,17 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
+											<span>1 Mission Street<br />
+											Mount Pleasant, MI 48858<br />
 											USA</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="#">chuck.pawlus@yahoo.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<span>(757) 870-3475</span>
 										</li>
 										<li>
 											<h3>Social</h3>
@@ -154,7 +159,7 @@
 												<li><a href="#" class="fa-facebook"><span class="label">Facebook</span></a></li>
 												<li><a href="#" class="fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="fa-linkedin"><span class="label">LinkedIn</span></a>"https://www.linkedin.com/in/charles-pawlus-72a1318/"</li>
+												<li><a href="#" class="fa-linkedin"><span class="label">LinkedIn</span></a>"</li>
 											</ul>
 										</li>
 									</ul>
