--- a/index.html
+++ b/index.html
@@ -34,10 +34,8 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<div class="desc">
-							<h1>Chuck Pawlus</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<div class="logo">
+							<a href="#" class="image"><img src="images/chuck1.jpg" alt="" data-position="center center" /></a>
 							<div>
 						</div>
 					</section>
@@ -70,32 +68,33 @@
 								<section>
 									<span class="icon major fa-legal"></span>
 									<h3>Contract Verification</h3>
-									<p>Verifying and Validting contracts</p>
+									<p>Help you Analyze your contract and come up with accurate Estimates to optimize profit.</p>
 								</section>
 								<section>
 									<span class="icon major fa-bus"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Fleet Analysis</h3>
+									<p>Help you determine if you should lease trucks,drivers.Single/Muliple Lease determination for Risk management.</p>
 								</section>
 								<section>
-									<span class="icon major fa-train"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="icon major fab-document"></span>
+									<h3>For Hire Negotations</h3>
+									<p>Help you Negotiate and select dedicated Contract Carriers</p>
 								</section>
 								<section>
 									<span class="icon major fa-legal"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Fleet Utilization</h3>
+									<p>Help you determine optimal utilization of your fleet by analyzing your historical utilization,routes
+									and give you best solution.</p>
 								</section>
 								<section>
 									<span class="icon major fa-chain"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Vehicle performance analysis</h3>
+									<p>Help you perform Vehicle performance analysis compared to industrial standards and help you optimize your Vehilcle services</p>
 								</section>
 								<section>
 									<span class="icon major fa-diamond"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Backhaul Opportunities </h3>
+									<p>Help you eliminate "Empty Miles" by optimally planning the routes and solicating freight for return hauls</p>
 								</section>
 							</div>
 							<ul class="actions">
@@ -111,7 +110,7 @@
 							<p>Please enter your contact information and a brief meesage. we will reach out to your as soon as possible</p>
 							<div class="split style1">
 								<section>
-									<<form action="https://formspree.io/eeti3084@email.com"method="post">
+									<form action="https://formspree.io/eeti3084@gmail.com"method="post">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
@@ -146,7 +145,7 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">chuck.pawlus@yahoo.com</a>
+											<a href="#">chuckpawlus@yahoo.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
